--- a/src/Server/Services/IdentityServer/IdentityServer.API/IdentityServer.API.csproj
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/IdentityServer.API.csproj
@@ -1,12 +1,16 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>0e738e42-93ab-4860-b3ee-264ab988342c</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
-  
-  <ItemGroup>
-    <PackageReference Include="IdentityServer4" Version="4.0.0" />
 
-    <PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
   </ItemGroup>
+
 </Project>
