--- a/src/Server/Services/IdentityServer/IdentityServer.API/appsettings.json
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Default": "Server=.,1433;Database=IdentityServer;User ID=sa;Password=@16_10_1998"
+  },
   "AllowedHosts": "*"
 }
