adding .net identity settings

--- a/src/Server/Services/IdentityServer/IdentityServer.API/IdentityServer.API.csproj
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/IdentityServer.API.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.6">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -19,6 +20,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\IdentityServer.Infrastructure\IdentityServer.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Application\DTO%27s\Responses\" />
+    <Folder Include="Application\DTO%27s\Requests\" />
+    <Folder Include="Application\ViewModels\" />
   </ItemGroup>
 
 </Project>
