--- a/src/Server/Services/IdentityServer/IdentityServer.API/Properties/launchSettings.json
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:7189;http://localhost:5189",
+      "applicationUrl": "http://localhost:5189",
       "dotnetRunMessages": true
     },
     "IIS Express": {
