--- a/src/Server/Services/IdentityServer/IdentityServer.Infrastructure/IdentityServer.Infrastructure.csproj
+++ b/src/Server/Services/IdentityServer/IdentityServer.Infrastructure/IdentityServer.Infrastructure.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\IdentityServer.Domain\IdentityServer.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Backgroud\Seeds\" />
+  </ItemGroup>
+
 </Project>
