--- a/src/Server/Services/IdentityServer/IdentityServer.API/appsettings.json
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/appsettings.json
@@ -8,5 +8,19 @@
   "ConnectionStrings": {
     "Default": "Server=.,1433;Database=IdentityServer;User ID=sa;Password=@16_10_1998"
   },
+  "AppSettings": {
+    "AuthSettings": {
+      "CookieSettings": {
+        "LoginPath": "/auth/signin",
+        "LogoutPath": "/auth/signout",
+        "AccessDeniedPath": "/auth/signin",
+        "CookieName": "IdentityServerAuthentication",
+        "ReturnUrlParameter": "returnUrl",
+        "ExpireTimeSpanMinutes": 60,
+        "HttpOnly": true,
+        "SlidingExpiration": false
+      }
+    }
+  },
   "AllowedHosts": "*"
 }
