--- a/src/Server/Services/IdentityServer/IdentityServer.API/appsettings.json
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=.,1433;Database=IdentityServer;User ID=sa;Password=@16_10_1998"
+    "Default": "Server=(localdb)\\DEVELOPMENT;Initial Catalog=IdentityServer;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;"
   },
   "AppSettings": {
     "AuthSettings": {
