--- a/src/Server/Services/IdentityServer/IdentityServer.API/IdentityServer.API.csproj
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/IdentityServer.API.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Application\ViewModels\Users\" />
     <Folder Include="wwwroot\images\auth\" />
   </ItemGroup>
 
